# vodka

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SKILL.md
.tequila/: work
.tequila/tasks/0001-implement-vodka-skill/: design.md  proposal.md  subtasks.md  validation.md
.tequila/tasks/0002-add-env-reproduce-from-yaml/: design.md  proposal.md  subtasks.md  validation.md
.tequila/tasks/0003-add-file-reference-in-yaml/: design.md  proposal.md  subtasks.md  validation.md
.tequila/tasks/0004-update-print-yaml-table/: design.md  proposal.md  subtasks.md  validation.md
.tequila/tasks/0005-align-yaml-order-with-reproduce-priority/: design.md  proposal.md  subtasks.md  validation.md
.tequila/tasks/0006-rename-server-to-system/: proposal.md  subtasks.md  validation.md
.tequila/tasks/0007-auto-file-ref-pyvenv-packages/: proposal.md  subtasks.md  validation.md
.tequila/tasks/0008-add-named-pyvenv-snapshots/: proposal.md  subtasks.md  validation.md
.tequila/tasks/0009-add-snapshot-naming-and-update-structure/: proposal.md  subtasks.md  validation.md
.tequila/tasks/0010-add-experiment-steps-extraction/: design.md  proposal.md  subtasks.md  validation.md
.tequila/tasks/0011-add-run-expect-list-support/: proposal.md  subtasks.md  validation.md
.tequila/tasks/0012-add-reproduce-target-directory/: proposal.md  subtasks.md  validation.md  work
.tequila/tasks/0013-move-exec-to-last-section/: proposal.md  subtasks.md  validation.md
.tequila/tasks/0014-refactor-reproduce-to-generate-scripts/: design.md  proposal.md  subtasks.md  validation.md
.tequila/tasks/0015-add-reproduce-script-templates/: design.md  proposal.md  subtasks.md  validation.md
.vodka/: env-snapshot-2026-02-27-20-56-46.yaml  requirements-system.txt  requirements.txt
.vodka/snapshot-dev-environment-2026-03-01-07-09-11/: env-snapshot.yaml
arch/: README.md
arch/generic/: generic.h
arch/riscv/: README.md
assets/templates/: env-snapshot-example.yaml  experiment-steps.sh  reproduce.sh  run_qemu.py
benchmark/: CMakeLists.txt  README.md  benchmark_main.cpp
cmake/: add-arch-kernel.cmake  detect-arch.cmake  set-compiler-flags.cmake
cmake/riscv/: check-riscv-extension.cmake  toolchain-riscv.cmake
doc/riscv/: README.md
references/: file-reference.md  reproduce.md  snapshot-container-template.md  snapshot-dep-template.md  snapshot-exec-template.md  snapshot-pyvenv.md  snapshot-qemu-template.md  snapshot-server.md  snapshot-system.md  snapshot-toolchain-template.md  snapshot.md
script/git/: reformat.sh
scripts/: extract_steps.py  print_yaml.py
test/: CMakeLists.txt  README.md  test_load_buffer.cpp  test_main.cpp
